# advent-of-code-2023

./: CMakeLists.txt  README.md
dependencies/cutil/: CMakeLists.txt
dependencies/cutil/include/cutil/: math.h
dependencies/cutil/source/: filesystem.c  math.c
dependencies/cutil/tests/: CMakeLists.txt  filesystem.c  math.c  sort.c
resources/: day-06-p2-input.txt
source/: day-01-p1.c  day-02-p2.c  day-03-p2.c  day-04-p1.c  day-04-p2.c  day-05-p1.c  day-05-p2.c  day-06-p1.c  day-07-p1.c  day-08-p2.c  day-09-p1.c  day-1-p1.c  day-1-p2.c  day-10-p1.c  day-10-p2.c  day-11-p1.c  day-11-p2.c  day-13-p1.c  day-2-p1.c  day-2-p2.c  day-3-p1.c  day-4-p1.c  day-4-p2.c  day-5-p1.c  day-5-p2.c  day-6-p1.c  day-6-p2.c  day-7-p1.c  day-7-p2.c  day-8-p1.c  day-9-p2.c
